--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/css/reset.css">
-        <link rel="stylesheet" href="/css/index.css">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/index.css">
         
         <title>Portfólio Maicon</title>
     </head>
     <body>
         <header>
-            <img id="logo" src="../assets/img/cogumelo.png" alt="Avatar do Maicon">
+            <img id="logo" src="assets/img/cogumelo.png" alt="Avatar do Maicon">
             <nav> 
                 
                 <a href="#">Skills</a>
