Update Project section

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
             <div class="wrapper-project">
                 
                 <div class="box-project -left">
-                    <a href="#"><img class="img" src="assets/img/mario.png" alt=""></a>
+                    <a href="#"><img class="img" src="assets/img/new_logo.png" alt=""></a>
                 </div>
                 <div class="box-project -center">
-                    <a href="#"><img class="img" src="assets/img/mario.png" alt=""></a>
+                    <a href="#"><img class="img" src="assets/img/new_logo.png" alt=""></a>
                 </div>
                 <div class="box-project -right">
-                    <a href="#"><img class="img" src="assets/img/mario.png" alt=""></a>
+                    <a href="#"><img class="img" src="assets/img/new_logo.png" alt=""></a>
                 </div>
             </div>
         </section>
